[docs] document post endpoint
